Add handling for GradientPaint (but without cyclic parameter).